added user count

--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -61,8 +61,14 @@
       CollectorsBoard is a platform where you're empowered to take control of your collections. 
     </div>
     <div class="card-body">
-      CollectorsBoard offers an alternative to those boring forums and gives you the power to <em>really</em> collect. From creating specific collections with a value tracker to posting in a community of your peers, CollectorsBoard has what you're looking for! 
+      CollectorsBoard offers an alternative to those boring forums and gives you the power to <em>really</em> collect. From creating specific collections with a value tracker to posting in a community of your peers, CollectorsBoard has what you're looking for!
       </div>
+
+      <div class="card-footer">
+        <a href="/index" class="btn text-white bg-primary mt-3 mb-4 w-100">We are at <span class="text-danger text-decoration-underline">{{get_user_count()}}</span>  users. Be the next one!</a>
+      </div>
+
+      
   </div>
 
 
