--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -86,9 +86,9 @@
         <div class="card border-primary bg-dark me-4 mt-4 mb-4 text-white float-start" style="width: 34rem;">
             <div class="card-body">
               <h5 class="card-title">Create Your Own Collections</h5>
-              <p class="card-text">Create collections to put your favorite items on display! Maybe you've got a Pokemon Deck, or maybe you've got this one set of coins you <em>looovve</em>. We want to see all you've got. Get started today!</em></p>
+              <p class="card-text">Create collections to put your favorite items on display! Maybe you've got a Pokemon Deck, or maybe you've got this one set of coins you <em>looovve</em>. We want to see all you've got, <em class="text-decoration-underline">plus you get a personlized link for every collection so you can easily share!</em></p>
               <img src="{{ url_for('static',filename='landingpage_1.png') }}" class="card-img-bottom" alt="...">
-              <a href="/index" class="btn text-white btn-primary mt-3 w-100">Start Now</a>
+              <a href="/index" class="btn text-white btn-primary mt-4 mb-4 w-100">Start Now</a>
             </div>
           </div>
 
