updated what is

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,45 +67,13 @@
 
 
 
-          <button class="btn btn-success" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-            What is CollectorsBoard? A free digital tool and platform to collect, value, organize, share and embrace your collection! Learn more by clicking this button!
-          </button>
-        <div class="collapse" id="collapseExample">
-          <div class="card card-body bg-dark text-white">
-            <p class="text-start"><em><strong>Here at CollectorsBoard, we are out to provide a free and open tool to track, value and share your collectables. Want to show people your full collection quickly or get the total value of your entire collection? Try CollectorsBoard.live out!</strong></em></p>
-
-
-            <p1 class="text-start"><em>A few things we currently offer!</em></p1>
-            <ul class="list-style text-start">
-                <li>Create item posts/entrys</li>
-                <li>Join and make posts within a category specific community.</li>
-                <li>Adding your items and other users items to your customizable collections</li>
-                <li>Pin posts to the top of your collections with a pinned tag!</li>
-                <li>Comment on, share, save items/collections</li>
-                <li>Create entrys/posts with current market value (beta).</li>
-                <li>Add tags such as where and when an item was made, a photo and the official name along with general details</li>
-                <li>Custom feed built for you!</li>
-                <li>Open Source code and full disclosure of what partners we work with!</li>
-            </ul>
-
-            <p1 class="text-start"><em>Features in development:</em></p1>
-            <ul class="list-style text-start">
-                <li>Market Place</li>
-                <li>Live auctions</li>
-                <li>Image galleries for each item</li>
-                <li>Updating prices of items/collections every few hours!</li>
-                <li>Instant Messaging</li>
-                <li>-	Admins for communities(please reach out via our support form to claim your spot for a community)</li>
-            </ul>
-
-          </div>
-        </div>
-
-    </div>
-
+          <a href="/landingpage" class="btn btn-success" >
+            What is CollectorsBoard?
+          </a>
+        
     
 
-
+          </div>
       <div class="custom-class row mx-auto col-x col-md-8 col-lg-5 align-items-center bg-dark w-75" style="width: 45%; margin-top: 3%; " >
 
         
