allow emails again

--- a/templates/about_info.html
+++ b/templates/about_info.html
@@ -106,7 +106,7 @@
   
   <div class="card bg-dark text-white mt-3">
   <div class="card-header bg-danger text-white mt-3 mb-3">
-    Support Request - Please send emails directly to corieleclair.real@gmail.com | Our servers are having email issues. We are very sorry.
+    Support Request
   </div>
             <div class="form-group">
               <label for="exampleFormControlSelect bg-dark text-white1">Support Type</label>
@@ -123,14 +123,14 @@
             <div class="form-group bg-dark text-white mt-1">
             <div class="form-group bg-dark text-white">
               <label for="exampleFormControlTextarea1">Details(If you're logged out or have no account, leave contact info in this box along with a message</label>
-              <textarea class="form-control bg-dark text-white" id="exampleFormControlTextarea1" rows="3" disabled></textarea>
+              <textarea class="form-control bg-dark text-white" id="exampleFormControlTextarea1" rows="3" ></textarea>
             </div>
             <p1 id="messageSentNoti" class="mt-1" style="color: red; display: none">Message Sent! </p1>
           </div>
 
 
 
-            <button id="buttonSendEmail" type="reset" class="btn btn-danger mt-2 w-100 mt-3 mb-3" onclick="sendSupportEmail()" disabled>Send -></button>
+            <button id="buttonSendEmail" type="reset" class="btn btn-danger mt-2 w-100 mt-3 mb-3" onclick="sendSupportEmail()" >Send -></button>
         </div>
 
         
