--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>CollectorsBoard | Welcome</title>
+    <title>CollectorsBoard | Login</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="scrollingSystems.js" type="module"></script>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='bootstrap-5.0.2-dist/css/bootstrap.min.css') }}">
@@ -56,73 +56,92 @@
 
 <div class="card text-center bg-dark mx-auto w-75" style="width: 45%; margin-top: 3%; " >
 
-  <div class="card bg-dark text-white mb-3">
-    <div class="card-header bg-success">
-      CollectorsBoard is a platform where you're empowered to take control of your collections. 
-    </div>
-    <div class="card-body">
-      CollectorsBoard offers an alternative to those boring forums and gives you the power to <em>really</em> collect. From creating specific collections with a value tracker to posting in a community of your peers, CollectorsBoard has what you're looking for!
-      </div>
 
-      <div class="card-footer">
-        <a href="/index" class="btn text-white bg-primary mt-3 mb-4 w-100">We are at <span class="text-danger text-decoration-underline">{{get_user_count()}}</span>  users. Be the next one!</a>
-      </div>
-
-      
-  </div>
-
-
-    </div>
-
-
-
+          <div class="card bg-dark text-white mb-3">
+            <div class="card-header bg-success">
+               A digital tool to manage, organize, value, expand and share your collection.
+            </div>
+            <div class="card-body">
+              CollectorsBoard gives you access to free tools to manage your collection in many ways. From personalized sharable links to current market value of any items you have! 
+              </div>
+        
+              <div class="card-footer">
+                <a href="/index" class="btn text-white bg-primary mt-3 mb-4 w-50">We are at <span class="text-danger text-decoration-underline">{{get_user_count()}}</span> users. Sign up now!</a>
+                <a onclick="document.getElementById('loginDiv').scrollIntoView();" class="btn text-white bg-success mt-3 mb-4 w-25">Already A User?</a>
+              </div>
+        
+              
+          </div>
+        
+        
+            </div>
+        
+        
+        
+            
+        
+        
+              <div class="custom-class row mx-auto col-x col-md-8 col-lg-5 align-items-center w-75" style="width: 45%; margin-top: 3%; " >
+                <a href="/index" class="btn text-white bg-primary mt-3 mb-4 w-100">Get Started Today. All New Sign Ups Get Free Membership Options! (Until 3/1/24)</a>
+        
+        
+                <div class="card border-primary bg-dark me-4 mt-4 mb-4 text-white float-start" style="width: 34rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Manage Your Collections</h5>
+                      <p class="card-text">Start managing your collection today. We offer many free tools to value, organize and expand your collections. You get a personalized link for each collection, as we think the world should see your collections, not just you! Organize your collections by catagory, value, date of creation, place of birth, ect.</p>
+                      <img src="{{ url_for('static',filename='landingpage_1.png') }}" class="card-img-bottom" alt="...">
+                      <a href="/index" class="btn text-white btn-primary mt-4 mb-4 w-100">Start Now</a>
+                    </div>
+                  </div>
+        
+                  <div class="card border-success bg-dark me-4 mt-4 mb-4 text-white float-start" style="width: 34rem; ">
+                    <div class="card-body">
+                      <h5 class="card-title">Join A Community Today</h5>
+                      <p class="card-text">We know you love your stuff, and so will everyone else! Share your items and include all the details you want. Utilize the description tags too!</p>
+                      <img src="{{ url_for('static',filename='landingpage_2.png') }}" class="card-img-bottom" alt="...">
+                      <a href="/index" class="btn text-white bg-success mt-3 w-100">Join A Community</a>
+        
+                    </div>
+                  </div>
+        
+                  <div class="card border-danger bg-dark me-4 mt-4 mb-4 text-white float-end" style="width: 34rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Get Updates From Your Followers, Communities & More!</h5>
+                      <p class="card-text">Get updates when something you care happens. Maybe someone commented on your lovely piece, or someone followed you. Find out!</p>
+                      <img src="{{ url_for('static',filename='landingpage_3.png') }}" class="card-img-bottom" alt="...">
+                      <a href="/index" class="btn text-white bg-danger mt-3 w-100">Get Updates!</a>
+        
+                    </div>
+                  </div>
+        
+                  <div class="card border-warning bg-dark me-4 mt-4 mb-4 text-white float-end" style="width: 34rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Search What You Love!</h5>
+                      <p class="card-text">Do you want to see other stuff? Great! Search until you find something you care about. Search for communities, search for posts, search for collections. Search away!</p>
+                      <img src="{{ url_for('static',filename='landingpage_4.png') }}" class="card-img-bottom" alt="...">
+                      <a href="/index" class="btn text-white bg-warning mt-4 w-100">Find Stuff!</a>
+        
+                    </div>
+                  </div>
+        
+                  <a href="/index" class="btn text-white bg-primary mt-3 mb-4 w-100">Get Started Today. All New Sign Ups Get Free Membership Options! (Until 3/1/24)</a>
+        
+        
+        
+        
+        
+        
+        
+        
+               
+            </div>
+        
     
 
-
-      <div class="custom-class row mx-auto col-x col-md-8 col-lg-5 align-items-center w-75" style="width: 45%; margin-top: 3%; " >
-        <a href="/index" class="btn text-white bg-primary mt-3 mb-4 w-100">Get Started Today. All New Sign Ups Get Free Membership Options! (Until 3/1/24)</a>
-
-
-        <div class="card border-primary bg-dark me-4 mt-4 mb-4 text-white float-start" style="width: 34rem;">
-            <div class="card-body">
-              <h5 class="card-title">Create Your Own Collections</h5>
-              <p class="card-text">Create collections to put your favorite items on display! Maybe you've got a Pokemon Deck, or maybe you've got this one set of coins you <em>looovve</em>. We want to see all you've got, <em class="text-decoration-underline">plus you get a personlized link for every collection so you can easily share!</em></p>
-              <img src="{{ url_for('static',filename='landingpage_1.png') }}" class="card-img-bottom" alt="...">
-              <a href="/index" class="btn text-white btn-primary mt-4 mb-4 w-100">Start Now</a>
-            </div>
           </div>
+      <div class="custom-class row mx-auto col-x col-md-8 col-lg-5 align-items-center bg-dark w-75" style="width: 45%; margin-top: 3%; " >
 
-          <div class="card border-success bg-dark me-4 mt-4 mb-4 text-white float-start" style="width: 34rem; ">
-            <div class="card-body">
-              <h5 class="card-title">Join A Community Today</h5>
-              <p class="card-text">We know you love your stuff, and so will everyone else! Share your items and include all the details you want. Utilize the description tags too!</p>
-              <img src="{{ url_for('static',filename='landingpage_2.png') }}" class="card-img-bottom" alt="...">
-              <a href="/index" class="btn text-white bg-success mt-3 w-100">Join A Community</a>
-
-            </div>
-          </div>
-
-          <div class="card border-danger bg-dark me-4 mt-4 mb-4 text-white float-end" style="width: 34rem;">
-            <div class="card-body">
-              <h5 class="card-title">Get Updates From Your Followers, Communities & More!</h5>
-              <p class="card-text">Get updates when something you care happens. Maybe someone commented on your lovely piece, or someone followed you. Find out!</p>
-              <img src="{{ url_for('static',filename='landingpage_3.png') }}" class="card-img-bottom" alt="...">
-              <a href="/index" class="btn text-white bg-danger mt-3 w-100">Get Updates!</a>
-
-            </div>
-          </div>
-
-          <div class="card border-warning bg-dark me-4 mt-4 mb-4 text-white float-end" style="width: 34rem;">
-            <div class="card-body">
-              <h5 class="card-title">Search What You Love!</h5>
-              <p class="card-text">Do you want to see other items? Great! Search until you find something you care about. Search for communities, search for posts, search for collections. Search away!</p>
-              <img src="{{ url_for('static',filename='landingpage_4.png') }}" class="card-img-bottom" alt="...">
-              <a href="/index" class="btn text-white bg-warning mt-4 w-100">Find Stuff!</a>
-
-            </div>
-          </div>
-
-          <a href="/index" class="btn text-white bg-primary mt-3 mb-4 w-100">Get Started Today. All New Sign Ups Get Free Membership Options! (Until 3/1/24)</a>
+        
 
 
 
@@ -130,8 +149,87 @@
 
 
 
+        <div id="loginDiv" class="card-header bg-dark text-white" style="background-color: darkgray;">
+          Sign In
+        </div>
 
-       
+        <div class="card-body text-white">
+
+
+            <form method="POST" action="/index">
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email address OR username</label>
+                  <input  class="form-control bg-dark text-white" id="exampleInputEmail1" aria-describedby="emailHelp" name='login-username'>
+                </div>
+
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label bg-dark text-white">Password</label>
+                  <input type="password" class="form-control bg-dark text-white" id="exampleInputPassword1" name='login-password'>
+                    {% if session["logged_in"] == False %}
+                        <p style="color: red">Contact support for login help if you need it!</p>
+                    {% endif %}
+                </div>
+                <button type="submit" class="btn btn-primary w-100" onclick="loginClicked()" name='login-button'>Login
+                  <span class="spinner-grow spinner-grow-sm" id="loader_button_icon" style="display: none" role="status" aria-hidden="true"></span>
+                </button>
+              </form>
+          
+
+        </div>
+        <div id="emailHelp" class="form-text mb-2 mt-2">By signing up or logging in, you agree to our <a href="/privacypolicy"> privacy policy and user terms of use. </a></div>
+    </div>
+
+
+
+    <div class="card text-center bg-dark mx-auto w-75" style="width: 45%; margin-top: 3%; margin-bottom: 3%;" >
+
+        <div class="card-header bg-dark text-white" style="background-color: darkgray;">
+          Sign Up
+        </div>
+        
+        <div class="card-body bg-dark text-white">
+
+
+            <form class="needs-validation" action="/index" method="post">
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label bg-dark text-white" style="color: white">Username</label>
+                <input name="username" class="form-control bg-dark text-white" id="exampleInputEmail1" aria-describedby="usernameHelp" required>
+              </div>
+              <div id="usernameHelp" class="form-text">You must use a unique username!</a></div>
+
+              
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label bg-dark text-white" style="color: white">Email address</label>
+                  <input name='email' type="email" class="form-control bg-dark text-white" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+                </div>
+                {% if session["logged_in"] == "used_username" %}
+                        <p style="color: red">This username is already in use!</p>
+                    {% elif session["logged_in"] == "used_email" %}
+                        <p style="color: red">This email is already in use!</p>
+                    {% elif session["logged_in"] == "invalid" %}
+                        <p style="color: red">Invalid characters. Do NOT use any spaces, @, (), +, =, *, &, ^, %, $, #, !, [], ', ", /, ., ?, |</p>
+                    {% endif %}
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label bg-dark text-white " style="color: white">Password</label>
+                  <input name="password" type="password" class="form-control bg-dark text-white mb-2" id="exampleInputPassword1" aria-describedby="passwordHelp" required>
+                  <label for="exampleInputPassword2" class="form-label bg-dark text-white mt-2" style="color: white">Enter Password Again</label>
+                  <input name="passwordTwo" type="password" class="form-control bg-dark text-white" id="exampleInputPassword2"  required>
+                  <div id="passwordHelp" class="form-text">Please use a valid email, and do NOT forget your password. It may not be able to be reset.</a></div>
+
+                  {% if session["logged_in"] == "match_fail" %}
+                        <p style="color: red">Passwords Don't Match!</p>
+                  {% endif %}
+                  
+                </div>
+
+                <button type="submit" class="btn btn-primary" onclick="signUpClicked()" name="signup-button">Sign up
+                  <span class="spinner-grow spinner-grow-sm" id="loader_button_icon_signup" style="display: none" role="status" aria-hidden="true"></span>
+
+                </button>
+              </form>
+              <div id="emailHelp" class="form-text mb-2 mt-2">By signing up or logging in, you agree to our <a href="/privacypolicy"> privacy policy and user terms of use. </a></div>
+
+                  </div>
     </div>
 
 
