--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -66,8 +66,8 @@
               </div>
         
               <div class="card-footer">
-                <a onclick="document.getElementById('loginDiv').scrollIntoView();" class="btn text-white bg-primary mt-3 mb-4 w-50">We are at <span class="text-danger text-decoration-underline">{{get_user_count()}}</span> users. Sign up now!</a>
-                <a onclick="document.getElementById('loginDiv').scrollIntoView();" class="btn text-white bg-success mt-3 mb-4 w-25">Already A User?</a>
+                <a onclick="document.getElementById('loginDiv').scrollIntoView();" class="btn text-white bg-primary w-50">We are at <span class="text-danger text-decoration-underline">{{get_user_count()}}</span> users. Sign up now!</a>
+                <a onclick="document.getElementById('loginDiv').scrollIntoView();" class="btn text-white bg-success mt-1 w-50">Already A User?</a>
               </div>
         
               
