fixing the same bug

--- a/templates/collectionview.html
+++ b/templates/collectionview.html
@@ -126,7 +126,7 @@
                   <a style="text-decoration: underline; color: white" href="/viewuser/{{get_collection_byid(para1)[3]}}">{{get_collection_byid(para1)[3]}} <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
                 </svg></a>
-                     | <p id="collection_name_text"> {{get_collection_byid(para1)[0]}}</p>
+                     | <p style="display: inline-block;" id="collection_name_text"> {{get_collection_byid(para1)[0]}}</p>
                 </div>
                 <div class="card-body bg-dark text-white">
                   <img style="width: 86px;" class="rounded-circle shadow-4-strong" alt="avatar2" src='{{ get_user_avatar(get_collection_byid(para1)[3]) }}' />
