patched post button failures
added the postblock.js for button control for macro on search

--- a/templates/search.html
+++ b/templates/search.html
@@ -22,6 +22,7 @@
     <script src="{{ url_for('static',filename='bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js') }}"></script>
     <script src="{{ url_for('static',filename='search.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static',filename='scrollingSystems.js') }}"></script>
+    <script src="{{ url_for('static',filename='post_block.js') }}"></script>
     <script src="{{ url_for('static',filename='comments.js') }}"></script>
 
 
