--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1813,7 +1813,7 @@
 
 <div id="div-collection" class="card w-100 bg-dark">
   <div class="card-body">
-    <h5 class="card-title text-white"> {{collection[5]}} | {{ collection[1] }} Items</h5>
+    <h5 class="card-title text-white"> {{collection[5]}}</h5>
   </br>
     <a  class="card-subtitle mb-2 text-muted" href="/viewuser/{{collection[3]}}">{{ collection[3] }}
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
@@ -1822,7 +1822,12 @@
 
     </a>
     <p class="card-text text-white">{{ collection[4] }} | {{ count_items_in_collection(collection[3]) }}</p>
-    <a href="/collectionview/{{collection[1]}}" class="card-link btn btn-primary">View</a>
+    <span class="badge bg-success">${{ collection[6] }}</span>
+    <span class="badge bg-danger">{{ count_items_in_collection(collection[1]) }} Items </span>
+
+    <br>
+
+    <a href="/collectionview/{{collection[1]}}" class="card-link btn btn-primary mt-2">View</a>
 
       {% if is_collection_saved(session['username'], collection[1]) %}
           <button typeof="button" onclick='ajaxSaveCollection( "{{collection[1]}}", "{{ username }}", "{{ post_type }}")' id="{{ save_collection }}" value="saved" type="button" class="card-link btn btn-primary">Save</button>
