update on item count

--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1821,7 +1821,7 @@
     </svg>
 
     </a>
-    <p class="card-text text-white">{{ collection[4] }} | {{ count_items_in_collection(collection[3]) }}</p>
+    <p class="card-text text-white">{{ collection[4] }}</p>
     <span class="badge bg-success">${{ collection[6] }}</span>
     <span class="badge bg-danger">{{ count_items_in_collection(collection[1]) }} Items </span>
 
