made Popular feed the first tab to open

--- a/templates/a.html
+++ b/templates/a.html
@@ -149,18 +149,18 @@
 
         <div class="dropdown w-100 mb-3 mt-4">
           <button class="btn btn-secondary dropdown-toggle bg-transparent w-50 float-start" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-            Home
+            Popular
           </button>
           <ul class="dropdown-menu bg-dark w-100" aria-labelledby="dropdownMenuButton1">
-                <li><button id="buttonForYouHome" class="btn btn-dark w-100 text-start" onclick="closeAll('#collapseForYou')" type="button" data-bs-toggle="collapse" data-bs-target="#collapseForYou" aria-expanded="true" aria-controls="collapseForYou">
-                    Home
+                <li><button id="buttonForYouHome" class="btn btn-dark w-100 text-start" onclick="closeAll('#collapseForYou')" type="button" data-bs-toggle="collapse" data-bs-target="#collapseForYou" aria-expanded="false" aria-controls="collapseForYou">
+                    For You
                 </button></li>
 
               <li><button id="buttonForYouCollections" class="btn btn-dark w-100 text-start" onclick="closeAll('#collapseForYouCollections')" type="button" data-bs-toggle="collapse" data-bs-target="#collapseForYouCollections" aria-expanded="false" aria-controls="collapseForYouCollections">
                     Collections
                 </button></li>
 
-                <li><button id="buttonForYouPopular" class="btn btn-dark w-100 text-start" onclick="closeAll('#collapseForYouPopular')" type="button" data-bs-toggle="collapse" data-bs-target="#collapseForYouPopular" aria-expanded="false" aria-controls="collapseForYouPopular">
+                <li><button id="buttonForYouPopular" class="btn btn-dark w-100 text-start" onclick="closeAll('#collapseForYouPopular')" type="button" data-bs-toggle="collapse" data-bs-target="#collapseForYouPopular" aria-expanded="true" aria-controls="collapseForYouPopular">
                     Popular
                 </button></li>
 
